# nurbs

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  nurbs.hpp  travis.yml
doc/: Adaptor.md
include/mocabe/nurbs/detail/: access.hpp  arithmetic.hpp  dimension.hpp  element_type.hpp  lerp.hpp  nurbs_data.hpp  space.hpp  tvec.hpp
include/nurbs/detail/: access.hpp
sample/: CMakeLists.txt  basic_usage.cpp  glm_adaptor.hpp  modify.cpp  simple_vector_adaptor.hpp
src/detail/: NURBS.hpp  intersec.hpp  knot_insert.hpp  reverse.hpp  split.hpp  tangent.hpp
src/util/: access.hpp  algorithm.hpp  degenerate.hpp  dimension.hpp  div.hpp  fma.hpp  geometry.hpp  knot_traits.hpp  minus.hpp  mult.hpp  nurbs_util.hpp  plus.hpp  point_traits.hpp  setup.hpp  tags.hpp  vector_traits.hpp
test/: CMakeLists.txt  access.cpp  dimension.cpp  element_type.cpp  test.hpp  tvec.cpp  vec2.hpp
test/2/: 2D_2.cpp
test/2D/: CMakeLists.txt  intersec.cpp  reverse.cpp  split.cpp  tangent.cpp  vector_traits.cpp
test/2D/0/: 2D_0.cpp  CMakeLists.txt
test/2D/1/: 2D_1.cpp  CMakeLists.txt
test/2D/2/: 2D_2.cpp  CMakeLists.txt
test/2D/config/: adaptor.hpp  adaptor.inl  df_adaptor.hpp  dfvec.hpp  dvec.hpp  struct.hpp
test/3D/: CMakeLists.txt  geometry.cpp  knot_insert.cpp
test/3D/config/: adaptor.hpp  adaptor.inl  dvec.hpp  struct.hpp
test/config/: adaptor.hpp  struct.hpp
test/util/: CMakeLists.txt  util_test.cpp
